Hotfix en reserva

--- a/src/app/privado/components/notas/notas.component.html
+++ b/src/app/privado/components/notas/notas.component.html
@@ -11,6 +11,7 @@
   ></app-p-text-area>
   <ng-container *ngIf="mode !== 'M'">
     <app-p-text-area
+      *ngIf="notas && notas.length"
       [text]="notas[0].notas"
       (modificar)="modificarNotas($event, notas[0].id)"
       (cancel)="mode = undefined"
