--- a/src/app/privado/captacion/captacion.component.html
+++ b/src/app/privado/captacion/captacion.component.html
@@ -1,8 +1,8 @@
-<br>
-<br>
+<br />
+<br />
 <div class="container">
   <h2>Reservas por fuentes de captación</h2>
-  <hr class="my-2">
+  <hr class="my-2" />
 </div>
 <div class="container">
   <div class="row">
@@ -15,40 +15,40 @@
           <div class="row">
             <div class="col-md-6">
               <label for="mydate">Desde</label>
-              <my-date-picker id="mydate" name="mydate" [options]="myDatePickerOptions" [(ngModel)]="feDesde"
-                (dateChanged)="onDateChanged($event, 'D')"></my-date-picker>
+              <!-- <my-date-picker id="mydate" name="mydate" [options]="myDatePickerOptions" [(ngModel)]="feDesde"
+                (dateChanged)="onDateChanged($event, 'D')"></my-date-picker> -->
               <div [hidden]="!hbDesde.show" class="helper-p">
-                <p class="text-warning mb-0">{{hbDesde.mensaje}}</p>
+                <p class="text-warning mb-0">{{ hbDesde.mensaje }}</p>
               </div>
               <!-- <small [hidden]="!hbDesde.show" class="form-text text-muted">{{hbDesde.mensaje}}</small> -->
             </div>
             <div class="col-md-6">
               <label for="mydate0">Hasta</label>
-              <my-date-picker id="mydate0" name="mydate0" [options]="myDatePickerOptions" [(ngModel)]="feHasta"
-                (dateChanged)="onDateChanged($event, 'H')"></my-date-picker>
+              <!-- <my-date-picker id="mydate0" name="mydate0" [options]="myDatePickerOptions" [(ngModel)]="feHasta"
+                (dateChanged)="onDateChanged($event, 'H')"></my-date-picker> -->
               <div [hidden]="!hbHasta.show" class="helper-p">
-                <p class="text-warning mb-0">{{hbHasta.mensaje}}</p>
+                <p class="text-warning mb-0">{{ hbHasta.mensaje }}</p>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <hr class="my-2">
+      <hr class="my-2" />
       <div class="row">
         <div class="col-md-12">
           <app-card-chart [options]="chart"></app-card-chart>
         </div>
       </div>
-      <hr class="my-2">
+      <hr class="my-2" />
       <!-- <card-reservas [reservas]="reservadosDb"></card-reservas> -->
     </div>
     <div class="col-lg-3 col-md-2 col-sm-12" id="sidebar">
-
       <div class="card mt-2">
         <div class="card-body">
           <h4 class="card-title">Ayuda</h4>
           <p class="card-text">
-            Genera estadísticas de tus reservas frente a los diferentes fuentes de captación en un rango de fechas determinado.
+            Genera estadísticas de tus reservas frente a los diferentes fuentes de captación en un rango de fechas
+            determinado.
           </p>
         </div>
       </div>
